Fix some overlap styling issues with sub-headers
In particular, call list buttons and most date filters were overlapping the row count

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -2196,9 +2196,9 @@ lion-validation-feedback[type] {
     border: 1px solid rgb(212, 212, 216);   /* --sl-input-border-color */
     text-align: center;
     border-radius: 3px;
-    float: right;
     position: relative;
     min-width: 40px;
+    order: 99;
 }
 
 .nextmatch_header .header_count span {
